feat: add file upload functionality for documents and update related forms and templates

--- a/src/templates/docdb/new_document.html
+++ b/src/templates/docdb/new_document.html
@@ -12,5 +12,5 @@
         {{ render_form_row([form.document_type, form.files]) }}
         {{ render_field(form.submit) }}
     </form>
-    {{ initialize_user_files(user_files) }}
+    {{ initialize_user_files("new-document-form", user_files) }}
 {% endblock content %}
