--- a/src/templates/docdb/snippets/user_files.html
+++ b/src/templates/docdb/snippets/user_files.html
@@ -1,4 +1,4 @@
-{% macro initialize_user_files(user_files) %}
+{% macro initialize_user_files(form_id, user_files) %}
     <script src="{{ url_for('static', filename='js/user_files.js') }}"></script>
     <style>
         input[type="file"] {
@@ -6,7 +6,7 @@
         }
     </style>
     <script>
-        initializeUserFiles("new-document-form", 
+        initializeUserFiles("{{ form_id }}", 
             "{{ user_files.file_token }}", 
             JSON.parse(`{{ user_files.document_tokens | tojson }}`), 
             "{{ url_for('file.upload_file') }}"
