--- a/src/templates/docdb/snippets/author.html
+++ b/src/templates/docdb/snippets/author.html
@@ -10,7 +10,8 @@
                     <i class="fas fa-user"></i> Author
                 </th>
                 <th>
-                    <i class="fas fa-calendar-alt"></i> Date Registered
+                    <i class="fas fa-file-alt"></i>
+                    Document Count
                 </th>
             </tr>
         </thead>
@@ -26,7 +27,7 @@
             {% for author in authors %}
                 <tr>
                     <td>{{ render_author(author) }}</td>
-                    <td>{{ author.created_at.strftime("%Y-%m-%d %H:%M:%S") }}</td>
+                    <td>{{ author.get_document_count() }}</td>
                 </tr>
             {% endfor %}
         </tbody>
