fix: update user role permissions check to use EDIT_SELF and escape document abstract in view

--- a/src/templates/docdb/view_document.html
+++ b/src/templates/docdb/view_document.html
@@ -21,7 +21,7 @@
             <tr>
                 <th>Abstract</th>
                 <td>
-                    {{ document.abstract.replace('\n', '<br>') }}
+                    {{ (document.abstract | escape).replace('\n', '<br>') }}
                 </td>
             </tr>
             <tr>
