--- a/src/templates/docdb/view_document.html
+++ b/src/templates/docdb/view_document.html
@@ -12,7 +12,7 @@
     <h2>Document Details</h2>
     {{ render_moderation_options(document) }}
     <hr>
-    <div class="document-details">
+    <div class="document-details table-responsive">
         <table class="table table-striped table-bordered">
             <tr>
                 <th style="width: 25%">Title</th>
@@ -21,7 +21,7 @@
             <tr>
                 <th>Abstract</th>
                 <td>
-                    {{ (document.abstract | escape).replace('\n', '<br>') }}
+                    {{ (document.abstract | escape).replace('\n', '<br>') | safe }}
                 </td>
             </tr>
             <tr>
