fix: remove unnecessary escape from document abstract rendering

--- a/src/templates/docdb/view_document.html
+++ b/src/templates/docdb/view_document.html
@@ -21,7 +21,7 @@
             <tr>
                 <th>Abstract</th>
                 <td>
-                    {{ (document.abstract | escape).replace('\n', '<br>') | safe }}
+                    {{ document.abstract.replace('\n', '<br>') | safe }}
                 </td>
             </tr>
             <tr>
