--- a/src/enrgdocdb/templates/base.html
+++ b/src/enrgdocdb/templates/base.html
@@ -17,6 +17,7 @@
               href="{{ url_for('static', filename='images/favicon.jpg') }}">
         <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.30.1/moment.min.js"></script>
         <script src="{{ url_for('static', filename='js/date_handler.js') }}?v=4"></script>
+        <script src="{{ url_for('static', filename='js/redirect_after_login.js')}}"></script>
         <title>
             {% block title %}
             {% endblock title %}
